2006-01-20  Martin Soto  <martinsoto@users.sourceforge.net>

	* serql/environment.py (ParseEnvironment.parse): Convert ANTLR
	exceptions into serql module exceptions.

	* serql/error.py (Error, PositionError, SyntaxError) 
	(SemanticError): New classes to report parsing errors.

	* serql/serql.g: Deactivate default error handler.
	(var): Store location information into the Var object.

	* serql/parser.py (LocationNode, Var) 
	(SelectContext.expandVariables.operation): Extend variable nodes to
	have location info. Use that info to produce adequate unbound
	variable errors.

2006-01-20  Martin Soto  <martinsoto@users.sourceforge.net>

	* serql/__init__.py: Export only the parser environment.

	* serql/environment.py: New entry point for SerQL parsing,
	encapsulating parsing and expression simplification.

	* serql/parser.py (Parser.basePrefixes, Parser.getPrefixUri) 
	(Parser.resolveQName): Make the complete prefix table public and
	implement a two level lookup scheme for prefixes. Prefixes are now
	searched in the external 'prefixes' table, and, if not found, in
	the set of SerQL predefined prefixes.
	(__repr__, setPrefix): Deleted.

	* serql/serql.g (query): Add main production with simplified
	definition.

2006-01-20  Martin Soto  <martinsoto@users.sourceforge.net>

	* serql/serql.g (selectQuery, var, uri): 
	* serql/parser.py (Var, expandVariables.operation)
	(Parser.__slots__, Parser.__init__, Parser.setPrefix)
	(Parser.getPrefixUri, Parser.getPrefixes, Parser.resolveQName)
	(Parser.__repr__, Parser.exprFromTriple, Parser.exprFromPattern): 
	serql.py renamed to parser.py. query.Query class merged into
	Parser class. query.py deleted.

2006-01-20  Martin Soto  <martinsoto@users.sourceforge.net>

	* serql/error.py: New module for exception classes.

2006-01-19  Martin Soto  <martinsoto@users.sourceforge.net>

	* serql/serql.py: 
	* serql/serql.g: 
	* serql/query.py: 
	* expression/rewrite.py: 
	Rename "tree" module to "expression" and and its "expression"