@@ -21,6 +21,20 @@ class LocationNode(nodes.ExpressionNode):
         self.line = line
         self.column = column
         self.fileName = fileName
+
+
+class QName(LocationNode):
+    """An expression node representing a qualified name."""
+
+    __slots__ = ('qname')
+
+    def __init__(self, qname, line=None, column=None, fileName=None):
+        super(QName, self).__init__(line, column, fileName)
+
+        self.qname = qname 
+
+    def prettyPrintAttributes(self, stream, indentLevel):
+        stream.write(' %s' % self.qname)
         
 
 class Var(LocationNode):
@@ -143,7 +157,8 @@ class SelectContext(object):
 class Parser(antlr.LLkParser):
     """The base class for the SerQL parser generated by ANTLR."""
 
-    __slots__ = ('prefixes')
+    __slots__ = ('externalPrefixes',
+                 'localPrefixes')
 
 
     # The standard SerQL predefined prefixes.
@@ -156,24 +171,54 @@ class Parser(antlr.LLkParser):
 
 
     def __init__(self, *args, **kwargs):
+        """Initializes a Parser object.
+
+        If a keyword argument 'prefixes' is provided, it will be
+        expected to be a dictionary containing predefined namespace
+        prefix bindings intended to be used in addition to the
+        standard SerQL prefixes. See `Parser.getPrefixUri` for
+        details."""
         super(Parser, self).__init__(*args, **kwargs)
 
         try:
-            self.prefixes = kwargs['prefixes']
+            self.externalPrefixes = kwargs['prefixes']
         except KeyError:
-            self.prefixes = {}
+            self.externalPrefixes = {}
+
+    def initLocalPrefixes(self):
+        """Initialize the set of locally defined namespace prefixes
+        (prefixes defined by the query itself through the USING
+        NAMESPACE clause) to the empty set.
+
+        This method must be called at least once before performing any
+        prefix lookups."""
+        self.localPrefixes = {}
+
+    def createLocalPrefix(self, prefix, uri):
+        """Create a new local prefix `prefix` with associated URI
+        `uri`."""
+        self.localPrefixes[prefix] = uri
 
     def getPrefixUri(self, prefix):
-        # FIXME: Produce appropriate exception.
-        try:
-            return self.prefixes[prefix]
-        except KeyError:
-            return self.basePrefixes[prefix]
+        """Return the URI associated to namespace prefix `prefix`.
 
-    def resolveQName(self, qName):
-        pos = qName.index(':')
-        base = self.getPrefixUri(qName[:pos])
-        return base + qName[pos + 1:]
+        Prefixes will be searched for first in the locally defined
+        set, then in the external set provided when constructing the
+        parser object, and finally in the predefined SerQL base set.
+
+        A `KeyError` will be raised if the given prefix is not found."""
+        try:
+            return self.localPrefixes[prefix]
+        except KeyError:
+            try:
+                return self.externalPrefixes[prefix]
+            except KeyError:
+                return self.basePrefixes[prefix]
+
+
+    #
+    # Expression Construction and Transformation
+    #
 
     @staticmethod
     def exprFromTriple(context, subject, pred, object):
@@ -240,3 +285,36 @@ class Parser(antlr.LLkParser):
                               for mappingExpr in mappingExprs])
         current = nodes.NameColumns(columnNames, current)
         return current
+
+    def resolveQName(self, qName):
+        """Create a URI expression node corresponding to qualified
+        name `qName`."""
+        pos = qName.index(':')
+        base = self.getPrefixUri(qName[:pos])
+        return nodes.Uri(base + qName[pos + 1:])
+
+    def expandQNames(self, expr):
+        """Expand all QName nodes in `expr` into their corresponding
+        URIs."""
+
+        def operation(expr, subexprsModif, *subexprs):
+            assert isinstance(expr, QName)
+            assert subexprsModif == False
+
+            try:
+                return self.resolveQName(expr.qname), True
+            except KeyError:
+                raise error.SemanticError(
+                    msg=_("Undefined namespace prefix '%s'") % expr.qname,
+                    line=expr.line, column=expr.column,
+                    fileName=expr.fileName)
+
+        return rewrite.treeMatchApply(QName, operation, expr)[0]
+
+    def checkPrefix(self, token):
+        if token.getText() == '_':
+            raise error.SyntaxError(msg=_("Invalid namespace prefix '_'"),
+                                    line=token.getLine(),
+                                    column=token.getColumn(),
+                                    fileName=self.getFilename())
+        return token.getText()
